# VibeCoding

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_NOW.sh  DOCKER_WORKFLOW.md  PROJECT_STATUS.md  QUICK_FIX.md  README.md  README_FIX.md  README_NEXT_STEPS.md  TEST_RESULTS.md  auto_fix_format.py  design-tokens.css  fix_format.py  fix_prettier_docker.sh  git-commit.sh  global.css  test.py  test_precommit.md  verify_frontend_backend.sh  一键修复.sh  下一步行动计划.md  开始开发.md  执行方案1-拉取格式化代码.sh  执行方案2-本地格式化.sh  文档导航.md  本次开发总结.md  终极解决方案.md  问题总结与解决方案.md
Week2/backend/: README.md  alembic.ini  pyproject.toml
Week2/backend/alembic/: README.md  env.py
Week2/backend/alembic/versions/: 20260110_000001_initial_migration.py
Week2/backend/app/: config.py  main.py
Week2/backend/app/db/: base.py  mysql.py  postgres.py  sqlite.py
Week2/backend/app/models/: database.py  metadata.py  query.py
Week2/backend/app/services/: ai_service.py  db_service.py  metadata_service.py  query_service.py
Week2/backend/app/storage/: local_db.py  models.py
Week2/backend/app/utils/: error_handler.py  locks.py  sql_validator.py
Week2/backend/tests/: conftest.py
Week2/backend/tests/test_api/: test_dbs.py
Week2/backend/tests/test_utils/: test_sql_validator.py
Week3/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Week3/src-tauri/capabilities/: default.json
Week3/src-tauri/src/: lib.rs  main.rs
Week3/src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs  resampler.rs
Week3/src-tauri/src/config/: mod.rs  store.rs
Week3/src-tauri/src/input/: clipboard.rs  error.rs  injector.rs  keyboard.rs  mod.rs
Week3/src-tauri/src/network/: client.rs  mod.rs  protocol.rs  state_machine.rs
Week3/src-tauri/src/system/: hotkey.rs  mod.rs  permissions.rs
Week3/src-tauri/src/ui/: commands.rs  mod.rs  tray.rs
Week3/src-tauri/src/utils/: logger.rs  mod.rs
Week3/src-tauri/tests/: integration_flow.rs
Week5/: .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION_GUIDE.md  FINAL_TEST_GUIDE.md  MCP_SETUP_FIX.md  Makefile  PHASE2_COMPLETE.md  PHASE3_TEST_REPORT.md  PRODUCTION_TEST_REPORT.md  QUICK_TEST.md  README.md  README_DASHSCOPE.md  STABILITY_ISSUES.md  TEST_QUERIES.md  TEST_SUMMARY.md  mcp_config.json  monitor_mcp.sh  pyproject.toml  test_claude_simple.sh  test_mcp_claude.sh  test_production.py  test_production_full.py  test_results.json  test_results_ai_generation.json  test_results_production.json
Week5/.claude/: config.json
Week5/.cursor/: README.md  constitution.md
Week5/config/: config.dashscope.yaml  config.example.yaml  config.yaml
Week5/examples/: sample_queries.json
Week5/fixtures/: README.md  docker-compose.yml
Week5/fixtures/init/: 00_create_databases.sh  02_init_medium.sh  03_init_large.sh
Week5/fixtures/init/large/: 01_schema.sql  generate_data.py
Week5/fixtures/init/medium/: 01_schema.sql  generate_data.py
Week5/fixtures/init/small/: 01_init_small.sh  04_data_orders.sql
Week5/fixtures/large/: 02_data.sql  generate_data.py
Week5/fixtures/medium/: 02_data.sql  generate_data.py
Week5/fixtures/small/: 01_schema.sql  02_data_customers.sql  03_data_products.sql  05_data_reviews.sql  generate_data.py
Week5/scripts/: README.md  test_ai_generation.py  test_production.py  test_production_full.py
Week5/src/postgres_mcp/: __init__.py  __main__.py  config.py  server.py
Week5/src/postgres_mcp/ai/: __init__.py  openai_client.py  prompt_builder.py  response_parser.py
Week5/src/postgres_mcp/core/: __init__.py  query_executor.py  result_validator.py  schema_cache.py  sql_generator.py  sql_validator.py  template_matcher.py
Week5/src/postgres_mcp/db/: __init__.py  connection_pool.py  query_runner.py  schema_inspector.py
Week5/src/postgres_mcp/mcp/: __init__.py  tools.py  (+1 more)
Week5/test_reports/: contract_test_report.txt
Week5/tests/: conftest.py
Week5/tests/contract/: README.md  __init__.py  run_contract_tests.sh  run_tests.py  run_tests_module.py  run_tests_sample.py  test_framework.py  test_l1_basic.py  test_l2_join.py  test_l3_aggregate.py  test_l4_complex.py  test_l5_advanced.py  test_mcp_protocol.py  test_s1_security.py
Week5/tests/integration/: README.md  test_db_operations.py  test_mcp_interface.py  test_multi_database.py  test_query_execution.py  test_schema_cache.py  test_sql_generation.py  test_template_matching.py
Week5/tests/unit/: test_config.py  test_connection_pool.py  test_database_routing.py  test_jsonl_writer.py  test_models.py  test_openai_client.py  test_prompt_builder.py  test_query_executor.py  test_query_runner.py  test_result_validator.py  test_schema_cache.py  test_schema_inspector.py  test_sql_generator.py  test_sql_validator.py  test_template_loader.py  test_template_matcher.py  test_template_security.py
Week8/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  FIX_REPORT.md  IMPLEMENTATION_REPORT.md  OPENROUTER_SETUP.md  OPENROUTER_SUPPORT.md  PHASE1_SUMMARY.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICKSTART_OPENROUTER.md  README.md  STATUS_FEATURE_REPORT.md  TESTING_GUIDE.md  config.example.toml  quickstart.sh  test_build.sh
Week8/apps/ca-cli/: Cargo.toml
Week8/crates/ca-core/: Cargo.toml
Week8/crates/ca-pm/: Cargo.toml
Week8/docs/: EVENT_AND_REVIEW_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  PHASE3_SUMMARY.md  PROMPT_REFACTOR_REPORT.md  USAGE_EXAMPLE.md
backend/: Dockerfile.cn  pyproject.toml  verify_phase1.py  verify_phase2.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260108_000001_initial_migration.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  tag.py  ticket.py  ticket_tag.py
backend/app/schemas/: __init__.py  tag.py  ticket.py
backend/app/services/: __init__.py  tag_service.py  ticket_service.py
backend/app/utils/: __init__.py  pagination.py  responses.py
backend/scripts/: run_tests.sh  test_api.sh
backend/tests/: conftest.py
backend/tests/test_api/: test_tags.py  test_tickets.py
backend/tests/test_services/: __init__.py  test_tag_service.py  test_ticket_service.py
(+553 files in other folders)
