[project]
name = "postgres-mcp"
version = "0.1.0"
description = "PostgreSQL natural language query MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0,<0.4",
    "asyncpg>=0.29.0,<0.30",
    "sqlglot>=25.29.0,<26",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.7.0,<3",
    "openai>=1.59.0,<2",
    "structlog>=24.1.0,<25",
    "pyyaml>=6.0.1,<7",
    "python-dotenv>=1.0.0,<2",
    "pybreaker>=1.2.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "hypothesis>=6.98.0,<7",
    "ruff>=0.8.0,<0.9",
    "mypy>=1.13.0,<2",
    "pre-commit>=4.0.0,<5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
