[workspace]
resolver = "2"
members = [
    "crates/ca-core",
    "crates/ca-pm",
    "apps/ca-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ray"]
repository = "https://github.com/ray/code-agent"

[workspace.dependencies]
# Core execution engine dependencies
tokio = { version = "1.43", features = ["full"] }
claude-agent-sdk-rs = "0.6"
async-trait = "0.1.85"
futures = "0.3.31"

# Prompt manager dependencies
minijinja = { version = "2.6", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
ratatui = "0.30"
crossterm = "0.28"

# Common utilities
anyhow = "1.0.95"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4.38", features = ["serde"] }

# Configuration
toml = "0.8.20"
dirs = "6.0"

# YAML support for state files
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }

# File system utilities
walkdir = "2.5"
ignore = "0.4.23"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Testing utilities
tempfile = "3.14"

# Internal workspace crates
ca-core = { path = "crates/ca-core" }
ca-pm = { path = "crates/ca-pm" }
