[project]
name = "project-alpha-backend"
version = "0.1.0"
description = "Project Alpha Ticket Management System Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Project Alpha Team", email = "team@example.com" }
]

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # 数据库
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # 数据验证
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",

    # 代码质量
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",

    # 其他开发工具
    "ipython>=8.17.0",
]

[project.urls]
Homepage = "https://github.com/example/project-alpha"
Documentation = "https://docs.example.com/project-alpha"
Repository = "https://github.com/example/project-alpha"

# Black 配置
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# isort 配置
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

# Ruff 配置
[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",  # 行长度（由 Black 处理）
    "B008",  # 函数参数默认值
    "E402",  # 模块级导入不在顶部（Alembic 需要）
    "B904",  # except 子句中的 raise（FastAPI 异常处理模式）
    "UP007", # 使用 X | Y 类型注解（Python 3.10+，但保持兼容性）
    "F841",  # 未使用的变量（测试代码中）
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# mypy 配置
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

# Coverage 配置
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
