[package]
name = "scribeflow"
version = "0.1.0"
description = "ScribeFlow - 桌面实时语音听写系统"
authors = ["ScribeFlow Team"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core & Plugins
tauri = { version = "2.9", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"

# Audio
cpal = "0.16"
rubato = "0.16.2"

# Networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

# Input Simulation
enigo = "0.6.1"

# System Integration
keyring = "2.3"
active-win-pos-rs = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Concurrency
crossbeam = "0.8"
dashmap = "6.1"
arc-swap = "1.7"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

