[package]
name = "ca-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "code-agent"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

# Table formatting
comfy-table = "7.1"

# Internal dependencies
ca-core = { workspace = true }
ca-pm = { workspace = true }
serde_yaml = { workspace = true }
