[package]
name = "ca-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
ca-pm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"

[[example]]
name = "generate_status"
